# QtSkills

./: CMakeLists.txt  README.md  main.cpp
docs/: cmake_explanation.md  setup.md
src/basic/: CMakeLists.txt
src/data/: CMakeLists.txt  data_example.cpp
src/timer/: CMakeLists.txt  timer_example.cpp
src/worker/: CMakeLists.txt  worker.cpp  worker.h  worker_main.cpp
